style: fixd with figma

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -160,7 +160,7 @@
                             else if (formatLabelCode == "properties")
                             {
                                 <MExpansionPanel Disabled="@disablePanel" Value="configObject.Id" Class="rounded-lg my-3">
-                                    <MExpansionPanelHeader Context="_" Style="height: 56px;" Class="my-6">
+                                    <MExpansionPanelHeader Context="_" Style="height: 56px;" Class="px-6 my-4">
                                         <ChildContent>
                                             <ConfigItems ConfigObject="configObject"
                                                          Disabled="disablePanel"
@@ -342,7 +342,7 @@
                             else
                             {
                                 <MExpansionPanel Disabled="@disablePanel" Value="configObject.Id" Class="rounded-2 my-3">
-                                    <MExpansionPanelHeader Context="_" Style="height: 56px;" Class="my-6">
+                                    <MExpansionPanelHeader Context="_" Style="height: 56px;" Class="px-6 my-4">
                                         <ChildContent>
                                             <ConfigItems ConfigObject="configObject"
                                                          Disabled="disablePanel"
