--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
@@ -36,7 +36,7 @@
         <MCol Cols="12" class="d-flex" Style="font-size: 0.75rem; font-weight: 400;">
             @if (ConfigObject is { RelationConfigObjectId: 0, IsPublished: false } && content != tempContent)
             {
-                <div class="mr-2 d-flex align-center" style="height: 24px; padding:0 6px; background: #FF7D00;min-width:44px;max-width:56px;text-align: center;color: white; border-radius: 6px;line-height: 18px;">
+                <div class="mr-2 d-flex align-center" style="height: 24px; padding:0 6px; background: #FF7D00;min-width:44px;text-align: center;color: white; border-radius: 6px;line-height: 18px;">
                     @T("Modified")
                 </div>
             }
